<resources>
    <string name="app_name">Ag Monitor</string>
    <string name="welcome_to_agmonitor">Welcome</string>
    <string name="log_in_to_your_account">Please Log into your account</string>
    <string name="your_email_mobile">Your Email / Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="click_here">Click Here</string>
    <string name="do_you_have">Do not have an account ?</string>
    <string name="get_help"> Get Help</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="terms_privacy"><![CDATA[Terms & Conditions | Privacy Policy AgMonitor, 2023]]></string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email_or_phone">Please enter your Email or Phone number</string>
    <string name="valid_email">Please enter a valid Email</string>
    <string name="your_passwrd">Please enter your Password</string>
    <string name="passwrd_cases">Must be 8-20 characters, must include at least one lower case and one upper case alpha character and one numeric character</string>
    <string name="icorrect_email_or_passwrd">Incorrect email and password</string>
    <string name="passwrd_not_match">Password Not matching</string>
    <string name="new_passwrd">Enter new password</string>
    <string name="enter_confirm_passwrd">Enter confirm password</string>
    <string name="forgot_passwrd">Forgot Password</string>
    <string name="enter_your_registered_email_id">Enter your registered Email ID</string>
    <string name="your_email">Your Email</string>
    <string name="send_link">Send Link</string>
    <string name="do_not_have_an_account">Do not have an acount?</string>
    <string name="ag_moitor_2023">Privacy Policy | Copyright AgMonitor 2023</string>
    <string name="by_continuing"><![CDATA[By continuing, I agree to the AgMonitor Terms & Conditions]]></string>
    <string name="please_enter_email">Please enter your Email</string>
    <string name="please_create_your_account">Please create your account</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="loading">Loading</string>
    <string name="terms_and_conditions"><![CDATA[Please accept Terms & Conditions]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
</resources>