<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.authentication.ForgotPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/imgAgMonitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ag_monitor"/>
                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_passwrd"
                    android:layout_below="@id/imgAgMonitor"
                    android:gravity="center"
                    android:textSize="@dimen/eighteen"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_black"
                    android:layout_marginTop="@dimen/fourty_six"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/textPleaseLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_registered_email_id"
                    android:layout_below="@id/textWelcome"
                    android:gravity="center"
                    android:textSize="@dimen/thirteen"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="@dimen/eight"
                    android:visibility="visible"/>
                <RelativeLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPleaseLogin"
                    android:layout_marginTop="@dimen/twenty_five"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginHorizontal="@dimen/twenty_six">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/five"
                        android:layout_marginTop="@dimen/five"
                        android:layout_marginEnd="@dimen/five"
                        android:hint="@string/your_email"
                        android:paddingTop="@dimen/three"
                        android:textColorHint="@color/edit_text_hint_color"
                        app:hintTextAppearance="@style/HintText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/twenty_two"
                            android:layout_marginVertical="@dimen/ninteen"
                            android:background="@null"
                            android:fontFamily="@font/lato_regular"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_text_hint_color"
                            android:textSize="@dimen/normal_text_size"
                            android:inputType="text"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutSendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutEmail"
                    android:layout_marginTop="@dimen/twenty_five"
                    android:background="@drawable/bg_button"
                    android:layout_marginHorizontal="@dimen/twenty_six">
                    <TextView
                        android:id="@+id/textButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/eighteen"
                        android:layout_marginHorizontal="@dimen/twenty_two"
                        android:layout_marginVertical="@dimen/ninteen"
                        android:text="@string/send_link"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/lato_medium"/>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/layoutGetHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/twenty_two"
                    android:layout_marginTop="@dimen/eight"
                    android:layout_below="@+id/layoutSendButton"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textDoNotHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/thirteen"
                        android:text="@string/do_you_have"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato_black" />
                    <TextView
                        android:id="@+id/textGetHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/thirteen"
                        android:text="@string/get_help"
                        android:gravity="start"
                        android:textColor="@color/button_color"
                        android:fontFamily="@font/lato_regular"
                        android:layout_marginStart="@dimen/five"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textCopyRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/twenty_three"
                android:background="@null"
                android:fontFamily="@font/lato_regular"
                android:text="@string/ag_moitor_2023"
                android:textColor="@color/edit_text_hint_color"
                android:textSize="@dimen/thirteen" />
        </RelativeLayout>
    </ScrollView>
    <include
        android:id="@+id/layoutLoading"
        layout="@layout/custom_loading_dialog" />
</RelativeLayout>