<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.authentication.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/imgAgMonitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ag_monitor"/>
                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:layout_below="@id/imgAgMonitor"
                    android:gravity="center"
                    android:textSize="@dimen/eighteen"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_black"
                    android:layout_marginTop="@dimen/fourty_six"/>
                <TextView
                    android:id="@+id/textPleaseLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hi John, Create your new password here!"
                    android:layout_below="@id/textWelcome"
                    android:gravity="center"
                    android:textSize="@dimen/thirteen"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="@dimen/eight"/>
                <RelativeLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPleaseLogin"
                    android:layout_marginTop="@dimen/twenty_five"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginHorizontal="@dimen/twenty_six">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/five"
                        android:layout_marginTop="@dimen/five"
                        android:layout_marginEnd="@dimen/five"
                        android:hint="@string/new_password"
                        android:paddingTop="@dimen/three"
                        android:textColorHint="@color/edit_text_hint_color"
                        app:hintTextAppearance="@style/HintText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editNewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_marginHorizontal="@dimen/twenty_two"
                            android:layout_marginVertical="@dimen/ninteen"
                            android:inputType="textWebPassword"
                            android:textColorHint="@color/edit_text_hint_color"
                            android:fontFamily="@font/lato_regular"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutEmail"
                    android:layout_marginTop="@dimen/eleven"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginHorizontal="@dimen/twenty_six">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/five"
                        android:layout_marginTop="@dimen/five"
                        android:paddingTop="@dimen/three"
                        android:layout_marginEnd="@dimen/five"
                        android:hint="@string/confirm_password"
                        android:textColorHint="@color/edit_text_hint_color"
                        app:hintTextAppearance="@style/HintText">

                        <EditText
                            android:id="@+id/editConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_marginHorizontal="@dimen/twenty_two"
                            android:layout_marginVertical="@dimen/ninteen"
                            android:inputType="textWebPassword"
                            android:textColorHint="@color/edit_text_hint_color"
                            android:fontFamily="@font/lato_regular"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/layoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutPassword"
                    android:layout_marginTop="@dimen/seventeen"
                    android:background="@drawable/bg_button"
                    android:layout_marginHorizontal="@dimen/twenty_six">
                    <TextView
                        android:id="@+id/buttonReset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/eighteen"
                        android:layout_marginHorizontal="@dimen/twenty_two"
                        android:layout_marginVertical="@dimen/ninteen"
                        android:text="@string/reset"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/lato_medium"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/textForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="@dimen/thirteen"
                    android:layout_marginHorizontal="@dimen/twenty_two"
                    android:layout_marginTop="@dimen/twenty"
                    android:text="@string/forgot_your_password"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_regular"
                    android:layout_below="@+id/layoutButton"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/textClickHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="@dimen/thirteen"
                    android:layout_marginHorizontal="@dimen/twenty_two"
                    android:text="@string/click_here"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_black"
                    android:visibility="gone"
                    android:layout_below="@+id/textForgotPassword"/>
                <LinearLayout
                    android:id="@id/layoutGetHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/twenty_two"
                    android:layout_marginTop="@dimen/eight"
                    android:layout_below="@+id/textClickHere"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textDoNotHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/thirteen"
                        android:text="@string/do_you_have"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato_black" />
                    <TextView
                        android:id="@+id/textGetHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/thirteen"
                        android:text="@string/get_help"
                        android:gravity="start"
                        android:textColor="@color/button_color"
                        android:fontFamily="@font/lato_regular"
                        android:layout_marginStart="@dimen/five"/>
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/textTermsAndPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/thirteen"
                android:text="@string/terms_privacy"
                android:gravity="end"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"
                android:layout_marginTop="@dimen/six"
                android:layout_marginBottom="@dimen/twenty_one"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>